2006-01-04  Chris Lumens  <clumens@redhat.com>

	* pykickstart/data.py:  Finish removing monitor information.
	* pykickstart/writer.py:  Clean up output quoting a bit.

2005-12-12  Chris Lumens  <clumens@redhat.com>

	* pykickstart/data.py:  Remove monitor information from xconfig.
	* pykickstart/parser.py:  Remove monitor configuration from xconfig,
	move --noprobe option to monitor keyword.
	* pykickstart/writer.py:  Likewise.

2005-12-08  Chris Lumens  <clumens@redhat.com>

	* pykickstart/data.py:  Support bytesPerInode on RAID
	(Curtis Doty <Curtis at GreenKey.net> #175288).
	* pykickstart/parser.py:  Likewise.
	* pykickstart/writer.py:  Likewise.

2005-11-03  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec:  Bump version.

	* pykickstart/data.py:  Default to SELINUX_ENFORCING.
	anaconda expects partition sizes to start at None as --size=0 --grow
	is an acceptable combination (#172378).

	* pykickstart/parser.py:  Don't call shlex.split on anything inside a
	script (#172313).

2005-11-01  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec:  Bump version.

	* pykickstart/parser.py (KickstartHandlers.doVnc):  --connect is not
	required as it may be provided to anaconda on the command line
	(#172192).
	(KickstartHandlers.doNetwork):  --onboot takes no options.
	* pykickstart/writer.py (doFirewall):  Remove extra spaces.  Write out
	--<service> options if ports are set.

2005-10-28  Chris Lumens  <clumens@redhat.com>

	* pykickstart/writer.py (KickstartWriter.doClearPart):  Fix --all
	parameter.

2005-10-28  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec:  Bump version.

	* docs/programmers-guide:  Add documentation for error reporting.
	* pykickstart/parser.py:  Add --resolvedeps and --includedeps as
	deprecated options to %packages.  Pass line number to handlePackageHdr
	and handleScriptHdr.

2005-10-24  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec:  Bump version.

	* pykickstart/parser.py:  Report the line number on exceptions.